MongoDB Implementierung, Datengenerierung & Insert in local MongoDB